--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cython_test"
 version = "1.0"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 
 [project.optional-dependencies]
 dev = ["Cython>=3.0.11", "build", "setuptools"]
